# sprite-builder

./: .env.example  .gitignore  README.md  README_UI.md  pyproject.toml
characters/tzucan/: bible.yaml  palette.json
configs/: project.yaml
configs/examples/: tzucan_batch.yaml  tzucan_idle_right.yaml  tzucan_walk_north.yaml  tzucan_walk_right.yaml
configs/schemas/: artifact-manifest.schema.json  batch.schema.json  character-bible.schema.json  job.schema.json  sheet-session.schema.json
docs/: architecture.md  godot-export.md  orchestration.md  torso-alignment.md  usage.md
prompts/: animation_frame.jinja2  character_base.jinja2  repair_frame.jinja2  turnaround.jinja2
scripts/: align_frames_by_anchor.py  analyze_reference.py  autocut_sprite.py  batch_generate_sprite_set.py  build_spritesheet.py  detect_torso_anchor.py  export_godot_metadata.py  preview_animation.py  remove_background.py  validate_sprite_consistency.py
sheet_sessions/sheet-20260705T152631-d153d65d-0228/: session.json
sheet_sessions/sheet-20260705T154121-f2660d45-7d07/: session.json
sheet_sessions/sheet-20260705T155936-f2660d45-11db/: session.json
sheet_sessions/sheet-20260705T200922-69c281b8-99bc/: session.json
sheet_sessions/sheet-20260706T205718-f2660d45-45a5/: session.json
sheet_sessions/sheet-20260706T221724-3629defe-6f16/: session.json
sheet_sessions/sheet-20260706T221732-3629defe-5c7a/: session.json
sheet_sessions/sheet-20260706T221816-f2660d45-76be/: session.json
tests/: test_export_preview.py  test_pixel_editor_component.py  test_ui_cli.py  test_ui_smoke.py
(+458 files in other folders)
